--- a/credits.html
+++ b/credits.html
@@ -89,6 +89,31 @@
       </div>
 
       <!-- Thie is end of edit area -->
+      <script type="text/javascript">
+      <!--
+      google_ad_client = "pub-9507710613356481";
+      /* 728x90, 已建立 2009/5/10 */
+      google_ad_slot = "2482010893";
+      google_ad_width = 728;
+      google_ad_height = 90;
+      //-->
+      </script>
+      <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
+      <br />
+      <script type="text/javascript">
+      <!--
+      google_ad_client = "pub-9507710613356481";
+      /* 728x90, figure,  2009/5/11 */
+      google_ad_slot = "9508274001";
+      google_ad_width = 728;
+      google_ad_height = 90;
+      //-->
+      </script>
+      <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
       </section>
       <div id="footer"></div>
       </div>
