--- a/donate.html
+++ b/donate.html
@@ -15,19 +15,18 @@
 
       <div id="donation">
 <h3>Donation</h3>
-<p><a href="http://sourceforge.net/donate/index.php?group_id=183378"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /></a></p>
+<p><a href="http://sourceforge.net/donate/index.php?group_id=183378"><img src="http://images.sourceforge.net/images/project-support.jpg" alt="Support This Project" style="float: right; margin: 2px" /></a> <strong>Donate and leave comment in SourceForge</strong> If you use Partclone and it does the job for you, please donate to help us to make Partclone better.</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-Donate via PayPal: <input name="amount" value="5" type="radio"> $5 <input name="amount" value="10" type="radio"> $10 <input name="amount" value="20" type="radio"> $20  <input name="amount" value="50" type="radio"> $50 <input name="amount" value="" type="radio"> Other
+or <strong>Donate via PayPal:</strong> <input name="amount" value="5" type="radio"> $5 <input name="amount" value="10" type="radio"> $10 <input name="amount" value="20" type="radio"> $20  <input name="amount" value="50" type="radio"> $50 <input name="amount" value="" type="radio"> Other
 <input type="hidden" name="cmd" value="_donations">
 <input type="hidden" name="business" value="tlinux.tsai@gmail.com">
 <input type="hidden" name="item_name" value="partclone.org">
 <input name="submit" class="button" value="Donate!" type="submit">
 </form>
-<p>If you use Partclone and it does the job for you, please donate to help us to make Partclone better.</p>
 <p><strong>How to add link here:</strong><br />
 We want to say THANK YOU for all contributer, and list all received donation below. Since receiving your donation, we will send mail and list here. If you prefer assigne different arch text and link url, please just reply mail to us.</p>
 <h3>Received Donation List</h3>
-<br />Thank you for supporting Partclone.<br />
+<p>Thank you for supporting Partclone.</p>
 <!--
 <br /><strong>{$date}</strong><br />
 <ul>
@@ -289,6 +288,31 @@ We want to say THANK YOU for all contributer, and list all received donation bel
       </div>
 
       <!-- Thie is end of edit area -->
+      <script type="text/javascript">
+      <!--
+      google_ad_client = "pub-9507710613356481";
+      /* 728x90, 已建立 2009/5/10 */
+      google_ad_slot = "2482010893";
+      google_ad_width = 728;
+      google_ad_height = 90;
+      //-->
+      </script>
+      <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
+      <br />
+      <script type="text/javascript">
+      <!--
+      google_ad_client = "pub-9507710613356481";
+      /* 728x90, figure,  2009/5/11 */
+      google_ad_slot = "9508274001";
+      google_ad_width = 728;
+      google_ad_height = 90;
+      //-->
+      </script>
+      <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
       </section>
       <div id="footer"></div>
       </div>
