--- a/donate.html
+++ b/donate.html
@@ -63,6 +63,10 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 -->
 <br /><strong>June 2012</strong><br />
 <ul>
+<li> Aug - 23 <a href="http://www.livetipsportal.com" target="_blank">Livetipsportal.com</a></li>
+</ul>
+<br /><strong>June 2012</strong><br />
+<ul>
 <li> Jun - 18 <a href="http://www.internetlawyerlosangeles.org" target="_blank">internet lawyer los angeles</a></li>
 <li> Jun - 11 <a href="http://www.it-journal.de/" target="_blank">it journal</a></li>
 <li> Jun - 08 <a href="http://www.magneticpulsers.com/" target="_blank">Visit www.magneticpulsers.com</a></li>
