--- a/credits.html
+++ b/credits.html
@@ -32,7 +32,7 @@
 	<a href="usage_all.html">Usage</a> |
 	<a href="download.html">Download</a> |
 	<a href="help.html">Help</a> |
-	<a href="donate.html">Donation</a> |
+	<!--<a href="donate.html">Donation</a> |-->
 	<a href="credits.html">Crdits</a> 
 	</p>
       </header>
@@ -62,6 +62,10 @@
 	    <li>Ian Abbott, source code patches</li>
 	    <li>Javor, source code patches</li>
 	    <li>Kristian Erik Hermansen, source code suggestion</li>
+	</ul>
+	<h4>Donation</h4>
+	<ul>
+	    <li>Check list <a href="donate.html">Donation</a></li>
 	</ul>
 	<h4>Translators</h4>
 	<ul>
@@ -94,6 +98,8 @@
 	</ul>
 	<h4>Thanks</h4>
 	<ul>
+	    <li>Oliver Redner, WISHLIST for exact sizes in partclone.info</li>
+	    <li>Dale, bug report for web pages</li>
 	    <li>Zoltan Kraus, btrfs bug report</li>
 	    <li>Graham Inggs, extfs bug report</li>
 	    <li>Randy Syring, Source code review and suggestion</li>
