--- a/features.html
+++ b/features.html
@@ -32,7 +32,7 @@
 	<a href="usage_all.html">Usage</a> |
 	<a href="download.html">Download</a> |
 	<a href="help.html">Help</a> |
-	<a href="donate.html">Donation</a> |
+	<!--<a href="donate.html">Donation</a> |-->
 	<a href="credits.html">Crdits</a> 
 	</p>
       </header>
